--- a/form.html
+++ b/form.html
@@ -157,24 +157,21 @@
   <div class="footer-socnet">
     <ul class="footer-socnet__icons">
       <li>
-        <a class="footer-socnet__icons footer-socnet__icons--icon-twitter"
-           href="#">
+        <a class="footer-socnet__icons footer-socnet__icons--icon-twitter" href="#">
           <svg class="icon-twitter" viewbox="0 0 17.5 14.663">
             <use xlink:href="#icon-twitter" />
           </svg>
         </a>
       </li>
       <li>
-        <a class="footer-socnet__icons footer-socnet__icons--icon-facebook"
-           href="#">
+        <a class="footer-socnet__icons footer-socnet__icons--icon-facebook" href="#">
           <svg class="icon-facebook" viewbox="0 0 8.673 18.944">
             <use xlink:href="#icon-facebook" />
           </svg>
         </a>
       </li>
       <li>
-        <a class="footer-socnet__icons footer-socnet__icons--icon-youtube"
-           href="#">
+        <a class="footer-socnet__icons footer-socnet__icons--icon-youtube" href="#">
           <svg class="icon-youtube" viewbox="0 0 14.64 13.96">
             <use xlink:href="#icon-youtube" />
           </svg>
@@ -184,8 +181,7 @@
   </div>
   <div class="footer-copyright">
     <span class="footer-copyright__text">Разработано</span>
-    <a class="footer-copyright__logo-htmlacademy"
-       href="https://htmlacademy.ru/">
+    <a class="footer-copyright__logo-htmlacademy" href="https://htmlacademy.ru/">
       <svg class="logo-htmlacademy" viewbox="0 0 26.943 34.09">
         <use xlink:href="#logo-htmlacademy" />
       </svg>
