Mobile + tablet + desktop

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <h3 class="promo__feature-slogan">Меняет мир вокруг</h3>
       <p class="promo__feature-text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
       <h3 class="promo__feature-slogan">Заводит новых друзей</h3>
-      <p class="promo__feature-text">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
+      <p class="promo__feature-text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
     </div>
     <div class="promo-image"></div>
   </section>
